--- a/SklepUKW/SklepUKW/SklepUKW.csproj
+++ b/SklepUKW/SklepUKW/SklepUKW.csproj
@@ -141,8 +141,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\AppConfig.cs" />
+    <Compile Include="Infrastructure\Consts.cs" />
+    <Compile Include="Models\CartItem.cs" />
+    <Compile Include="Infrastructure\CartManager.cs" />
     <Compile Include="Infrastructure\CategoryDynamicNodeProvider.cs" />
     <Compile Include="Infrastructure\FilmsDetailsDynamicNodeProvider.cs" />
+    <Compile Include="Infrastructure\ISessionManager.cs" />
+    <Compile Include="Infrastructure\SessionManager.cs" />
     <Compile Include="Infrastructure\UrlHelpers.cs" />
     <Compile Include="Migrations\202103300855236_InitialCreate.cs" />
     <Compile Include="Migrations\202103300855236_InitialCreate.designer.cs">
